--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@
   height: 40vmin;
   pointer-events: none;
 }
+body{
+  height: 100svh;
+  width: 100svw;
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
